@@ -23,6 +23,7 @@ Version 1.1.5 to be released
 - Bug: Fixed the bug that some HTTP requests may cause a PHP notice complaining HTTP_HOST undefined in CHttpRequest (Qiang)
 - Enh #1126: CHtml can now properly render special HTML attributes, such as readonly, disabled, according to their boolean values (Qiang)
 - Enh #1419: CMaskedTextField, CAutoComplete, CStarRating, CJuiDatePicker, CJuiAutoComplete and CJuiSliderInput now can be used with tabular input (Sam Dark)
+- Enh #1450: Added support for theming widget views (Qiang)
 - Enh #1481: Added support for autoloading namespaced classes (Qiang)
 - Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
 - Enh #1546: Fixed the bug that disabling behaviors did not detach behavior event handlers (Qiang)
